// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Box demo examples Snapshots: basic 1`] = `
.emotion-12::after {
  clear: both;
  content: "";
  display: table;
}

.emotion-12 > *:not(:last-child) {
  margin-bottom: 1rem;
}

.emotion-1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #f0f5fc;
  color: #1d5bbf;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: 1px solid #cfe0fc;
  padding: 0.5em;
}

.emotion-0 {
  box-sizing: border-box;
  color: #333840;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  display: block;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #f0f5fc;
  color: #1d5bbf;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: 1px solid #cfe0fc;
  padding: 0.5em;
}

.emotion-0 *,
.emotion-0 *::before,
.emotion-0 *::after {
  box-sizing: inherit;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #f0f5fc;
  color: #1d5bbf;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: 1px solid #cfe0fc;
  position: relative;
}

.emotion-4::before {
  border-color: rgba(207,224,252,0.5);
  border-style: solid;
  border-width: 1.5em;
  bottom: 0;
  content: "";
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
}

.emotion-3 {
  box-sizing: border-box;
  color: #333840;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  display: block;
  padding-bottom: 1.5em;
  padding-left: 1.5em;
  padding-right: 1.5em;
  padding-top: 1.5em;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #f0f5fc;
  color: #1d5bbf;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: 1px solid #cfe0fc;
  position: relative;
}

.emotion-3 *,
.emotion-3 *::before,
.emotion-3 *::after {
  box-sizing: inherit;
}

.emotion-3::before {
  border-color: rgba(207,224,252,0.5);
  border-style: solid;
  border-width: 1.5em;
  bottom: 0;
  content: "";
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
}

.emotion-6 {
  box-sizing: border-box;
  color: #333840;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  display: block;
  margin-right: 50%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #f0f5fc;
  color: #1d5bbf;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: 1px solid #cfe0fc;
  padding: 0.5em;
}

.emotion-6 *,
.emotion-6 *::before,
.emotion-6 *::after {
  box-sizing: inherit;
}

.emotion-9 {
  box-sizing: border-box;
  color: #333840;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  display: block;
  margin-left: auto;
  margin-right: auto;
  width: 10em;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #f0f5fc;
  color: #1d5bbf;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: 1px solid #cfe0fc;
  padding: 0.5em;
}

.emotion-9 *,
.emotion-9 *::before,
.emotion-9 *::after {
  box-sizing: inherit;
}

<Styled(div)>
  <div
    className="emotion-12"
  >
    <Styled(Box)
      element="div"
    >
      <Box
        className="emotion-1"
        element="div"
      >
        <Styled(div)
          className="emotion-1"
          element="div"
        >
          <div
            className="emotion-0"
          >
            A
          </div>
        </Styled(div)>
      </Box>
    </Styled(Box)>
    <Styled(Box)
      element="div"
      padding="lg"
    >
      <Box
        className="emotion-4"
        element="div"
        padding="lg"
      >
        <Styled(div)
          className="emotion-4"
          element="div"
          padding="lg"
        >
          <div
            className="emotion-3"
          >
            B
          </div>
        </Styled(div)>
      </Box>
    </Styled(Box)>
    <Styled(Box)
      element="div"
      marginRight="50%"
    >
      <Box
        className="emotion-1"
        element="div"
        marginRight="50%"
      >
        <Styled(div)
          className="emotion-1"
          element="div"
          marginRight="50%"
        >
          <div
            className="emotion-6"
          >
            C
          </div>
        </Styled(div)>
      </Box>
    </Styled(Box)>
    <Styled(Box)
      element="div"
      marginHorizontal="auto"
      width="10em"
    >
      <Box
        className="emotion-1"
        element="div"
        marginHorizontal="auto"
        width="10em"
      >
        <Styled(div)
          className="emotion-1"
          element="div"
          marginHorizontal="auto"
          width="10em"
        >
          <div
            className="emotion-9"
          >
            D
          </div>
        </Styled(div)>
      </Box>
    </Styled(Box)>
  </div>
</Styled(div)>
`;

exports[`Box demo examples Snapshots: height 1`] = `
.emotion-1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #f0f5fc;
  color: #1d5bbf;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: 1px solid #cfe0fc;
  padding: 0.5em;
}

.emotion-9::after {
  clear: both;
  content: "";
  display: table;
}

.emotion-9 > *:not(:last-child) {
  margin-bottom: 1rem;
}

.emotion-9 > * {
  float: left;
  width: 30%;
}

.emotion-9 > *[class] {
  margin-bottom: 0;
}

.emotion-9 > *:not(:last-child) {
  margin-right: 5%;
}

.emotion-0 {
  box-sizing: border-box;
  color: #333840;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  display: block;
  height: 10em;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #f0f5fc;
  color: #1d5bbf;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: 1px solid #cfe0fc;
  padding: 0.5em;
}

.emotion-0 *,
.emotion-0 *::before,
.emotion-0 *::after {
  box-sizing: inherit;
}

.emotion-3 {
  box-sizing: border-box;
  color: #333840;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  display: block;
  height: 100px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #f0f5fc;
  color: #1d5bbf;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: 1px solid #cfe0fc;
  padding: 0.5em;
}

.emotion-3 *,
.emotion-3 *::before,
.emotion-3 *::after {
  box-sizing: inherit;
}

.emotion-6 {
  box-sizing: border-box;
  color: #333840;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  display: block;
  height: 33.33333333333333%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #f0f5fc;
  color: #1d5bbf;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: 1px solid #cfe0fc;
  padding: 0.5em;
}

.emotion-6 *,
.emotion-6 *::before,
.emotion-6 *::after {
  box-sizing: inherit;
}

<Styled(div)>
  <div
    className="emotion-9"
  >
    <Styled(Box)
      element="div"
      height="10em"
    >
      <Box
        className="emotion-1"
        element="div"
        height="10em"
      >
        <Styled(div)
          className="emotion-1"
          element="div"
          height="10em"
        >
          <div
            className="emotion-0"
          >
            A
          </div>
        </Styled(div)>
      </Box>
    </Styled(Box)>
    <Styled(Box)
      element="div"
      height={100}
    >
      <Box
        className="emotion-1"
        element="div"
        height={100}
      >
        <Styled(div)
          className="emotion-1"
          element="div"
          height={100}
        >
          <div
            className="emotion-3"
          >
            B
          </div>
        </Styled(div)>
      </Box>
    </Styled(Box)>
    <Styled(Box)
      element="div"
      height={0.3333333333333333}
    >
      <Box
        className="emotion-1"
        element="div"
        height={0.3333333333333333}
      >
        <Styled(div)
          className="emotion-1"
          element="div"
          height={0.3333333333333333}
        >
          <div
            className="emotion-6"
          >
            C
          </div>
        </Styled(div)>
      </Box>
    </Styled(Box)>
  </div>
</Styled(div)>
`;

exports[`Box demo examples Snapshots: inline 1`] = `
.emotion-9::after {
  clear: both;
  content: "";
  display: table;
}

.emotion-9 > *:not(:last-child) {
  margin-bottom: 1rem;
}

.emotion-9 > *[class] {
  margin-bottom: 0;
}

.emotion-1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #f0f5fc;
  color: #1d5bbf;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: 1px solid #cfe0fc;
  padding: 0.5em;
}

.emotion-0 {
  box-sizing: border-box;
  color: #333840;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #f0f5fc;
  color: #1d5bbf;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: 1px solid #cfe0fc;
  padding: 0.5em;
}

.emotion-0 *,
.emotion-0 *::before,
.emotion-0 *::after {
  box-sizing: inherit;
}

.emotion-3 {
  box-sizing: border-box;
  color: #333840;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  width: 100px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #f0f5fc;
  color: #1d5bbf;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: 1px solid #cfe0fc;
  padding: 0.5em;
}

.emotion-3 *,
.emotion-3 *::before,
.emotion-3 *::after {
  box-sizing: inherit;
}

<Styled(div)>
  <div
    className="emotion-9"
  >
    <Styled(Box)
      element="div"
      inline={true}
    >
      <Box
        className="emotion-1"
        element="div"
        inline={true}
      >
        <Styled(div)
          className="emotion-1"
          element="div"
          inline={true}
        >
          <div
            className="emotion-0"
          >
            A
          </div>
        </Styled(div)>
      </Box>
    </Styled(Box)>
    <Styled(Box)
      element="div"
      inline={true}
      width={100}
    >
      <Box
        className="emotion-1"
        element="div"
        inline={true}
        width={100}
      >
        <Styled(div)
          className="emotion-1"
          element="div"
          inline={true}
          width={100}
        >
          <div
            className="emotion-3"
          >
            B
          </div>
        </Styled(div)>
      </Box>
    </Styled(Box)>
    <Styled(Box)
      element="div"
      inline={true}
    >
      <Box
        className="emotion-1"
        element="div"
        inline={true}
      >
        <Styled(div)
          className="emotion-1"
          element="div"
          inline={true}
        >
          <div
            className="emotion-0"
          >
            C
          </div>
        </Styled(div)>
      </Box>
    </Styled(Box)>
  </div>
</Styled(div)>
`;

exports[`Box demo examples Snapshots: precedence 1`] = `
.emotion-1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #f0f5fc;
  color: #1d5bbf;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: 1px solid #cfe0fc;
  padding: 0.5em;
}

.emotion-0 {
  box-sizing: border-box;
  color: #333840;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  display: block;
  margin-bottom: 10px;
  margin-left: 30px;
  margin-right: 20px;
  margin-top: 10px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #f0f5fc;
  color: #1d5bbf;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: 1px solid #cfe0fc;
  padding: 0.5em;
}

.emotion-0 *,
.emotion-0 *::before,
.emotion-0 *::after {
  box-sizing: inherit;
}

.emotion-3 {
  box-sizing: border-box;
  color: #333840;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  display: block;
  margin-bottom: 10px;
  margin-left: 20px;
  margin-right: 30px;
  margin-top: 10px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #f0f5fc;
  color: #1d5bbf;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: 1px solid #cfe0fc;
  padding: 0.5em;
}

.emotion-3 *,
.emotion-3 *::before,
.emotion-3 *::after {
  box-sizing: inherit;
}

.emotion-6 {
  box-sizing: border-box;
  color: #333840;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  display: block;
  margin-bottom: 10px;
  margin-left: 40px;
  margin-right: 20px;
  margin-top: 10px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #f0f5fc;
  color: #1d5bbf;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: 1px solid #cfe0fc;
  padding: 0.5em;
}

.emotion-6 *,
.emotion-6 *::before,
.emotion-6 *::after {
  box-sizing: inherit;
}

.emotion-9 {
  box-sizing: border-box;
  color: #333840;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  display: block;
  margin-bottom: 10px;
  margin-left: 20px;
  margin-right: 40px;
  margin-top: 10px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #f0f5fc;
  color: #1d5bbf;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: 1px solid #cfe0fc;
  padding: 0.5em;
}

.emotion-9 *,
.emotion-9 *::before,
.emotion-9 *::after {
  box-sizing: inherit;
}

.emotion-12 {
  box-sizing: border-box;
  color: #333840;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  display: block;
  margin-bottom: 20px;
  margin-left: 10px;
  margin-right: 10px;
  margin-top: 40px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #f0f5fc;
  color: #1d5bbf;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: 1px solid #cfe0fc;
  padding: 0.5em;
}

.emotion-12 *,
.emotion-12 *::before,
.emotion-12 *::after {
  box-sizing: inherit;
}

.emotion-15 {
  box-sizing: border-box;
  color: #333840;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  display: block;
  margin-bottom: 40px;
  margin-left: 10px;
  margin-right: 10px;
  margin-top: 20px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #f0f5fc;
  color: #1d5bbf;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: 1px solid #cfe0fc;
  padding: 0.5em;
}

.emotion-15 *,
.emotion-15 *::before,
.emotion-15 *::after {
  box-sizing: inherit;
}

<div>
  <Styled(Box)
    element="div"
    margin={10}
    marginHorizontal={20}
    marginStart={30}
  >
    <Box
      className="emotion-1"
      element="div"
      margin={10}
      marginHorizontal={20}
      marginStart={30}
    >
      <Styled(div)
        className="emotion-1"
        element="div"
        margin={10}
        marginHorizontal={20}
        marginStart={30}
      >
        <div
          className="emotion-0"
        >
          10 20 10 30
        </div>
      </Styled(div)>
    </Box>
  </Styled(Box)>
  <Styled(Box)
    element="div"
    margin={10}
    marginEnd={30}
    marginHorizontal={20}
  >
    <Box
      className="emotion-1"
      element="div"
      margin={10}
      marginEnd={30}
      marginHorizontal={20}
    >
      <Styled(div)
        className="emotion-1"
        element="div"
        margin={10}
        marginEnd={30}
        marginHorizontal={20}
      >
        <div
          className="emotion-3"
        >
          10 30 10 20
        </div>
      </Styled(div)>
    </Box>
  </Styled(Box)>
  <Styled(Box)
    element="div"
    margin={10}
    marginHorizontal={20}
    marginLeft={40}
    marginStart={30}
  >
    <Box
      className="emotion-1"
      element="div"
      margin={10}
      marginHorizontal={20}
      marginLeft={40}
      marginStart={30}
    >
      <Styled(div)
        className="emotion-1"
        element="div"
        margin={10}
        marginHorizontal={20}
        marginLeft={40}
        marginStart={30}
      >
        <div
          className="emotion-6"
        >
          10 20 10 40
        </div>
      </Styled(div)>
    </Box>
  </Styled(Box)>
  <Styled(Box)
    element="div"
    margin={10}
    marginEnd={30}
    marginHorizontal={20}
    marginRight={40}
  >
    <Box
      className="emotion-1"
      element="div"
      margin={10}
      marginEnd={30}
      marginHorizontal={20}
      marginRight={40}
    >
      <Styled(div)
        className="emotion-1"
        element="div"
        margin={10}
        marginEnd={30}
        marginHorizontal={20}
        marginRight={40}
      >
        <div
          className="emotion-9"
        >
          10 40 10 20
        </div>
      </Styled(div)>
    </Box>
  </Styled(Box)>
  <Styled(Box)
    element="div"
    margin={10}
    marginTop={40}
    marginVertical={20}
  >
    <Box
      className="emotion-1"
      element="div"
      margin={10}
      marginTop={40}
      marginVertical={20}
    >
      <Styled(div)
        className="emotion-1"
        element="div"
        margin={10}
        marginTop={40}
        marginVertical={20}
      >
        <div
          className="emotion-12"
        >
          40 10 20 10
        </div>
      </Styled(div)>
    </Box>
  </Styled(Box)>
  <Styled(Box)
    element="div"
    margin={10}
    marginBottom={40}
    marginVertical={20}
  >
    <Box
      className="emotion-1"
      element="div"
      margin={10}
      marginBottom={40}
      marginVertical={20}
    >
      <Styled(div)
        className="emotion-1"
        element="div"
        margin={10}
        marginBottom={40}
        marginVertical={20}
      >
        <div
          className="emotion-15"
        >
          20 10 40 10
        </div>
      </Styled(div)>
    </Box>
  </Styled(Box)>
</div>
`;

exports[`Box demo examples Snapshots: responsive 1`] = `
.emotion-1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #f0f5fc;
  color: #1d5bbf;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: 1px solid #cfe0fc;
  padding: 0.5em;
}

.emotion-0 {
  box-sizing: border-box;
  color: #333840;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  display: block;
  margin-right: 50px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #f0f5fc;
  color: #1d5bbf;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: 1px solid #cfe0fc;
  padding: 0.5em;
}

.emotion-0 *,
.emotion-0 *::before,
.emotion-0 *::after {
  box-sizing: inherit;
}

@media (min-width:800px) and (max-width:1023px) {
  .emotion-0 {
    margin-right: 100px;
  }
}

@media (min-width:1024px) {
  .emotion-0 {
    margin-right: 150px;
  }
}

<Styled(Box)
  breakpoints={
    Array [
      800,
      "wide",
    ]
  }
  element="div"
  marginRight={
    Array [
      50,
      100,
      150,
    ]
  }
>
  <Box
    breakpoints={
      Array [
        800,
        "wide",
      ]
    }
    className="emotion-1"
    element="div"
    marginRight={
      Array [
        50,
        100,
        150,
      ]
    }
  >
    <Styled(div)
      breakpoints={
        Array [
          800,
          "wide",
        ]
      }
      className="emotion-1"
      element="div"
      marginRight={
        Array [
          50,
          100,
          150,
        ]
      }
    >
      <div
        className="emotion-0"
      >
        A
      </div>
    </Styled(div)>
  </Box>
</Styled(Box)>
`;

exports[`Box demo examples Snapshots: rtl 1`] = `
.emotion-9::after {
  clear: both;
  content: "";
  display: table;
}

.emotion-9 > *:not(:last-child) {
  margin-bottom: 1rem;
}

.emotion-1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #f0f5fc;
  color: #1d5bbf;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: 1px solid #cfe0fc;
  padding: 0.5em;
}

.emotion-0 {
  box-sizing: border-box;
  color: #333840;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  display: block;
  margin-left: 1.5em;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #f0f5fc;
  color: #1d5bbf;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: 1px solid #cfe0fc;
  padding: 0.5em;
}

.emotion-0 *,
.emotion-0 *::before,
.emotion-0 *::after {
  box-sizing: inherit;
}

.emotion-3 {
  box-sizing: border-box;
  color: #333840;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  display: block;
  margin-right: 1.5em;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #f0f5fc;
  color: #1d5bbf;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: 1px solid #cfe0fc;
  padding: 0.5em;
}

.emotion-3 *,
.emotion-3 *::before,
.emotion-3 *::after {
  box-sizing: inherit;
}

<div
  dir="rtl"
>
  <ThemeProvider>
    <ThemeProvider>
      <Styled(div)>
        <div
          className="emotion-9"
        >
          <Styled(Box)
            element="div"
            marginLeft="lg"
          >
            <Box
              className="emotion-1"
              element="div"
              marginLeft="lg"
            >
              <Styled(div)
                className="emotion-1"
                element="div"
                marginLeft="lg"
              >
                <div
                  className="emotion-0"
                >
                  اليسار
                </div>
              </Styled(div)>
            </Box>
          </Styled(Box)>
          <Styled(Box)
            element="div"
            marginStart="lg"
          >
            <Box
              className="emotion-1"
              element="div"
              marginStart="lg"
            >
              <Styled(div)
                className="emotion-1"
                element="div"
                marginStart="lg"
              >
                <div
                  className="emotion-3"
                >
                  بداية
                </div>
              </Styled(div)>
            </Box>
          </Styled(Box)>
          <Styled(Box)
            element="div"
            marginEnd="lg"
          >
            <Box
              className="emotion-1"
              element="div"
              marginEnd="lg"
            >
              <Styled(div)
                className="emotion-1"
                element="div"
                marginEnd="lg"
              >
                <div
                  className="emotion-0"
                >
                  النهاية
                </div>
              </Styled(div)>
            </Box>
          </Styled(Box)>
        </div>
      </Styled(div)>
    </ThemeProvider>
  </ThemeProvider>
</div>
`;

exports[`Box demo examples Snapshots: spacing 1`] = `
.emotion-15::after {
  clear: both;
  content: "";
  display: table;
}

.emotion-15 > *:not(:last-child) {
  margin-bottom: 1rem;
}

.emotion-1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #f0f5fc;
  color: #1d5bbf;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: 1px solid #cfe0fc;
  padding: 0.5em;
}

.emotion-0 {
  box-sizing: border-box;
  color: #333840;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  display: block;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #f0f5fc;
  color: #1d5bbf;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: 1px solid #cfe0fc;
  padding: 0.5em;
}

.emotion-0 *,
.emotion-0 *::before,
.emotion-0 *::after {
  box-sizing: inherit;
}

.emotion-3 {
  box-sizing: border-box;
  color: #333840;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  display: block;
  margin-right: 2em;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #f0f5fc;
  color: #1d5bbf;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: 1px solid #cfe0fc;
  padding: 0.5em;
}

.emotion-3 *,
.emotion-3 *::before,
.emotion-3 *::after {
  box-sizing: inherit;
}

.emotion-6 {
  box-sizing: border-box;
  color: #333840;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  display: block;
  margin-right: 6em;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #f0f5fc;
  color: #1d5bbf;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: 1px solid #cfe0fc;
  padding: 0.5em;
}

.emotion-6 *,
.emotion-6 *::before,
.emotion-6 *::after {
  box-sizing: inherit;
}

.emotion-9 {
  box-sizing: border-box;
  color: #333840;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  display: block;
  margin-right: 120px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #f0f5fc;
  color: #1d5bbf;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: 1px solid #cfe0fc;
  padding: 0.5em;
}

.emotion-9 *,
.emotion-9 *::before,
.emotion-9 *::after {
  box-sizing: inherit;
}

.emotion-12 {
  box-sizing: border-box;
  color: #333840;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  display: block;
  margin-right: 33.33333333333333%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #f0f5fc;
  color: #1d5bbf;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: 1px solid #cfe0fc;
  padding: 0.5em;
}

.emotion-12 *,
.emotion-12 *::before,
.emotion-12 *::after {
  box-sizing: inherit;
}

<Styled(div)>
  <div
    className="emotion-15"
  >
    <Styled(Box)
      element="div"
    >
      <Box
        className="emotion-1"
        element="div"
      >
        <Styled(div)
          className="emotion-1"
          element="div"
        >
          <div
            className="emotion-0"
          >
            none
          </div>
        </Styled(div)>
      </Box>
    </Styled(Box)>
    <Styled(Box)
      element="div"
      marginRight="xl"
    >
      <Box
        className="emotion-1"
        element="div"
        marginRight="xl"
      >
        <Styled(div)
          className="emotion-1"
          element="div"
          marginRight="xl"
        >
          <div
            className="emotion-3"
          >
            xl
          </div>
        </Styled(div)>
      </Box>
    </Styled(Box)>
    <Styled(Box)
      element="div"
      marginRight="6em"
    >
      <Box
        className="emotion-1"
        element="div"
        marginRight="6em"
      >
        <Styled(div)
          className="emotion-1"
          element="div"
          marginRight="6em"
        >
          <div
            className="emotion-6"
          >
            6em
          </div>
        </Styled(div)>
      </Box>
    </Styled(Box)>
    <Styled(Box)
      element="div"
      marginRight={120}
    >
      <Box
        className="emotion-1"
        element="div"
        marginRight={120}
      >
        <Styled(div)
          className="emotion-1"
          element="div"
          marginRight={120}
        >
          <div
            className="emotion-9"
          >
            120
          </div>
        </Styled(div)>
      </Box>
    </Styled(Box)>
    <Styled(Box)
      element="div"
      marginRight={0.3333333333333333}
    >
      <Box
        className="emotion-1"
        element="div"
        marginRight={0.3333333333333333}
      >
        <Styled(div)
          className="emotion-1"
          element="div"
          marginRight={0.3333333333333333}
        >
          <div
            className="emotion-12"
          >
            1/3
          </div>
        </Styled(div)>
      </Box>
    </Styled(Box)>
  </div>
</Styled(div)>
`;

exports[`Box demo examples Snapshots: width 1`] = `
.emotion-9::after {
  clear: both;
  content: "";
  display: table;
}

.emotion-9 > *:not(:last-child) {
  margin-bottom: 1rem;
}

.emotion-1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #f0f5fc;
  color: #1d5bbf;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: 1px solid #cfe0fc;
  padding: 0.5em;
}

.emotion-0 {
  box-sizing: border-box;
  color: #333840;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  display: block;
  width: 10em;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #f0f5fc;
  color: #1d5bbf;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: 1px solid #cfe0fc;
  padding: 0.5em;
}

.emotion-0 *,
.emotion-0 *::before,
.emotion-0 *::after {
  box-sizing: inherit;
}

.emotion-3 {
  box-sizing: border-box;
  color: #333840;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  display: block;
  width: 100px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #f0f5fc;
  color: #1d5bbf;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: 1px solid #cfe0fc;
  padding: 0.5em;
}

.emotion-3 *,
.emotion-3 *::before,
.emotion-3 *::after {
  box-sizing: inherit;
}

.emotion-6 {
  box-sizing: border-box;
  color: #333840;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  display: block;
  width: 33.33333333333333%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #f0f5fc;
  color: #1d5bbf;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: 1px solid #cfe0fc;
  padding: 0.5em;
}

.emotion-6 *,
.emotion-6 *::before,
.emotion-6 *::after {
  box-sizing: inherit;
}

<Styled(div)>
  <div
    className="emotion-9"
  >
    <Styled(Box)
      element="div"
      width="10em"
    >
      <Box
        className="emotion-1"
        element="div"
        width="10em"
      >
        <Styled(div)
          className="emotion-1"
          element="div"
          width="10em"
        >
          <div
            className="emotion-0"
          >
            A
          </div>
        </Styled(div)>
      </Box>
    </Styled(Box)>
    <Styled(Box)
      element="div"
      width={100}
    >
      <Box
        className="emotion-1"
        element="div"
        width={100}
      >
        <Styled(div)
          className="emotion-1"
          element="div"
          width={100}
        >
          <div
            className="emotion-3"
          >
            B
          </div>
        </Styled(div)>
      </Box>
    </Styled(Box)>
    <Styled(Box)
      element="div"
      width={0.3333333333333333}
    >
      <Box
        className="emotion-1"
        element="div"
        width={0.3333333333333333}
      >
        <Styled(div)
          className="emotion-1"
          element="div"
          width={0.3333333333333333}
        >
          <div
            className="emotion-6"
          >
            C
          </div>
        </Styled(div)>
      </Box>
    </Styled(Box)>
  </div>
</Styled(div)>
`;
